@@ -1,15 +1,46 @@
-javadir = $(datadir)/java/vrml/field
-
 JAVAROOT = $(top_builddir)/java
 
-noinst_JAVA = SFBool.java SFColor.java SFFloat.java SFImage.java \
-SFInt32.java SFNode.java SFRotation.java SFString.java SFTime.java \
-SFVec2f.java SFVec3f.java MFColor.java MFFloat.java MFInt32.java MFNode.java \
-MFRotation.java MFString.java MFTime.java MFVec2f.java MFVec3f.java \
-ConstSFBool.java ConstSFColor.java ConstSFFloat.java ConstSFImage.java \
-ConstSFInt32.java ConstSFNode.java ConstSFRotation.java ConstSFString.java \
-ConstSFTime.java ConstSFVec2f.java ConstSFVec3f.java ConstMFColor.java \
-ConstMFFloat.java ConstMFInt32.java ConstMFNode.java ConstMFRotation.java \
-ConstMFString.java ConstMFTime.java ConstMFVec2f.java ConstMFVec3f.java
-
-EXTRA_DIST = $(noinst_JAVA)
+if WITH_JDK
+javadir = $(datadir)/java/vrml/field
+noinst_JAVA = \
+        SFBool.java \
+        SFColor.java \
+        SFFloat.java \
+        SFImage.java \
+        SFInt32.java \
+        SFNode.java \
+        SFRotation.java \
+        SFString.java \
+        SFTime.java \
+        SFVec2f.java \
+        SFVec3f.java \
+        MFColor.java \
+        MFFloat.java \
+        MFInt32.java \
+        MFNode.java \
+        MFRotation.java \
+        MFString.java \
+        MFTime.java \
+        MFVec2f.java \
+        MFVec3f.java \
+        ConstSFBool.java \
+        ConstSFColor.java \
+        ConstSFFloat.java \
+        ConstSFImage.java \
+        ConstSFInt32.java \
+        ConstSFNode.java \
+        ConstSFRotation.java \
+        ConstSFString.java \
+        ConstSFTime.java \
+        ConstSFVec2f.java \
+        ConstSFVec3f.java \
+        ConstMFColor.java \
+        ConstMFFloat.java \
+        ConstMFInt32.java \
+        ConstMFNode.java \
+        ConstMFRotation.java \
+        ConstMFString.java \
+        ConstMFTime.java \
+        ConstMFVec2f.java \
+        ConstMFVec3f.java
+endif
