@@ -1,7 +1,6 @@
-javadir = $(datadir)/java/vrml/node
-
 JAVAROOT = $(top_builddir)/java
 
+if WITH_JDK
+javadir = $(datadir)/java/vrml/node
 noinst_JAVA = Node.java Script.java
-
-EXTRA_DIST = $(noinst_JAVA)
+endif
